fix todo